# SumBody

./: .gitignore  LICENSE  README.md  pyproject.toml
meta_assistant/: __main__.py
meta_assistant/services/: __init__.py  text_to_speech.py
sum_body/: __main__.py
sum_body/domain/: microphone_stream.py
sum_body/services/: audio2face.py  stt_client.py  text_summary.py
sumbody/: __main__.py
sumbody/domain/: microphone_stream.py
sumbody/services/: APIClinetXF.py  __init__.py  audio2chunks.py  audio2face.py  stt_client.py  text_summary.py  tts_client.py
sumbody/services/grpc/: audio2face_pb2_grpc.py
tests/: audio2face_test.py  stt.py  stt_test.py  text_summary_test.py  tts.py  tts_test.py
