[tool.poetry]
name = "SumBody"
version = "0.1.0"
description = "An intelligent meeting summary assistant based on ChatGPT."
license = "MIT"
authors = [
    "Nicola Massarenti <nicola.massarenti@gmail.com>",
    "Jesse Senior <jessesenior@outlook.com>",
    "Di Fang <fti@mail.scut.edu.cn>",
    "Xiaoye Zhu <Xshellye@github.com>",
    "1722087564 <1722087564@github.com>",
    "chen021127 <chen021127@github.com>",
]
readme = "README.md"
repository = "https://github.com/JesseSenior/SumBody"
packages = [{ include = "sumbody" }]

[tool.poetry.dependencies]
python = "^3.10"
keyboard = "^0.13.5"
loguru = "^0.6.0"
numpy = "^1.24.1"
openai = "^0.26.4"
protobuf = "^4.25.0"
pyaudio = "^0.2.13"
sounddevice = "^0.4.5"
soundfile = "^0.11.0"
typer = "^0.7.0"
websocket_client = "^1.6.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
